--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,35 @@ allprojects {
 
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-    }
+        implementation "org.jogamp.gluegen:gluegen-rt:2.3.1"
+        implementation "org.jogamp.jogl:jogl-all:2.3.1"
 
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-aarch64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-armv6"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6hf"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-i586"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-macosx-universal"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-i586"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-i586"
+
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-aarch64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-armv6"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6hf"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-i586"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-macosx-universal"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-i586"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-i586"
+    }
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
