Basic matrix transformations lesson

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'basic-canvas'
 include 'basic-logging'
 include 'basic-triangle'
 include 'basic-animation'
+include 'matrix-transformation'
