--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
     }
 
     dependencies {
+        implementation fileTree(dir: '../libs', include: ['*.jar'])
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
         implementation "org.jogamp.gluegen:gluegen-rt:2.3.1"
         implementation "org.jogamp.jogl:jogl-all:2.3.1"
